--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h1 class="dark-gray-red">COMING<br>SOON</h1>
                     <p class="de-red py-4">Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-                    <form>
+                    <form class="w-100">
                         <div class="d-flex flex-row">
                             <input class="w-100 border-1 rounded-pill py-3 ps-3" type="email" placeholder="Email Address" required>
                             <button class="bg-pink border rounded-pill py-3 px-5"><img src="./assets/icon-arrow.svg" alt=""></button>
